wrong color -- now correct

--- a/codeartproject/projectFiles/static/css/templatemo-digital-trend.css
+++ b/codeartproject/projectFiles/static/css/templatemo-digital-trend.css
@@ -39,7 +39,7 @@ https://templatemo.com/tm-538-digital-trend
     --menu-bg:              #9593D9;
 
     --box-bg:               #d8d8d8;
-    --title-color:          #52489c;
+    --title-color:          #ffffff;
     --gray-color:           #909090;
     --link-color:           #404040;
     --p-color:              #666262;
